@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-05-31  Piotr Ożarowski
+	* IMDB, IMDB-de and KinoDe movie plugins updated (thanks to Michael Jahn)
+
 2007-05-22  Piotr Ożarowski
 	* Minor fix in dbupgrade.py
 
